# cppvox

./: CMakeLists.txt
include/: Camera.hpp  Morton.hpp  Perlin.hpp  types.hpp  types.hpp.gch
include/Func/: Func.hpp
include/GLLib/: Buffer.hpp  GLLib.hpp  Program.hpp  Shader.hpp  VertexArray.hpp  Window.hpp
include/Timer/: Timer.hpp
src/: CMakeLists.txt  VoxelShaderFrag.glsl  VoxelShaderVert.glsl  main.cpp
src/GLLib/: CMakeLists.txt
